News UAT/force-app/main/default/objects/General_Batch_Log__c/General_Batch_Log__c.object-meta.xml
<CustomObject>
    <label>General Batch Log</label>
    <nameField>
        <displayFormat>GBL-{0000}</displayFormat>
        <label>General Batch Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>