News UAT/force-app/main/default/objects/General_Batch_Log__c/fields/Batch_Job_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_No__c</fullName>
    <description>2015-06 CCN</description>
    <label>Batch Job Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>