News UAT/force-app/main/default/objects/General_Batch_Log__c/fields/Batch_Mode__c.field-meta.xml
<CustomField>
    <fullName>Batch_Mode__c</fullName>
    <label>Batch Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Detect</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>