News UAT/force-app/main/default/objects/General_Batch_Log__c/fields/CCN_Detected__c.field-meta.xml
<CustomField>
    <fullName>CCN_Detected__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CCN Detected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>