News UAT/force-app/main/default/objects/General_Batch_Log__c/fields/Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Records__c</fullName>
    <label>Number of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>