News UAT/force-app/main/default/objects/General_Batch_Log__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <label>sObject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>EmailMessage</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>